datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
  output = "../node_modules/.prisma/client"
}

model User {
  id         Int      @id @default(autoincrement())
  email      String   @unique
  password   String
  name       String?
  createdAt  DateTime @default(now())
}

model DataBatch {
  id         Int          @id @default(autoincrement())
  name       String
  createdAt  DateTime     @default(now())
  samples    DataSample[]
}

model DataSample {
  id             Int       @id @default(autoincrement())
  batchId        Int
  batch          DataBatch @relation(fields: [batchId], references: [id])
  image_capture  String    // url or filename
  classification String    // e.g. "good", "bad", "unknown", etc.
  luster_value   Float?
  roughness      Float?
  tensile_strength Float?
  createdAt      DateTime  @default(now())

  @@index([batchId])
}
